force-app/main/default/objects/Facture_SAV__c/Facture_SAV__c.object-meta.xml
<CustomObject>
    <label>Facture SAV</label>
    <nameField>
        <label>Facture SAV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factures SAV</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>