force-app/main/default/objects/Facture_SAV__c/fields/Date_Emission__c.field-meta.xml
<CustomField>
    <fullName>Date_Emission__c</fullName>
    <label>Date Emission</label>
    <type>Date</type>
</CustomField>