force-app/main/default/objects/Facture_SAV__c/fields/Demande_SAV__c.field-meta.xml
<CustomField>
    <fullName>Demande_SAV__c</fullName>
    <label>Demande SAV</label>
    <referenceTo>Demande_SAV__c</referenceTo>
    <relationshipLabel>Factures SAV</relationshipLabel>
    <relationshipName>Factures_SAV</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>