force-app/main/default/objects/Facture_SAV__c/fields/Montant_TTC__c.field-meta.xml
<CustomField>
    <fullName>Montant_TTC__c</fullName>
    <formula>Montant_HT__c * (1 + (TVA_Taux__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>