force-app/main/default/objects/Facture_SAV__c/fields/Numero_Facture__c.field-meta.xml
<CustomField>
    <fullName>Numero_Facture__c</fullName>
    <displayFormat>FAC-{YYYY}-{0000}</displayFormat>
    <label>Numero Facture</label>
    <type>AutoNumber</type>
</CustomField>