force-app/main/default/objects/Facture_SAV__c/fields/PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_URL__c</fullName>
    <label>PDF URL</label>
    <type>Url</type>
</CustomField>