force-app/main/default/objects/Facture_SAV__c/fields/TVA_Taux__c.field-meta.xml
<CustomField>
    <fullName>TVA_Taux__c</fullName>
    <label>TVA Taux</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>